--- a/basiclib/build.gradle
+++ b/basiclib/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 
 
 
-//    api 'com.android.support:appcompat-v7:28.0.0'
+    api 'com.android.support:support-v4:28.0.0'
     api "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
     api "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayoutVersion"
 
@@ -60,7 +60,7 @@ dependencies {
     api 'jp.wasabeef:glide-transformations:3.3.0'
 
     api 'org.greenrobot:eventbus:3.1.1'
-    api 'com.jakewharton:butterknife:8.8.1'
+    api "com.jakewharton:butterknife:$rootProject.butterknife_version"
     api 'com.jakewharton.timber:timber:4.7.1'
     api 'com.github.GrenderG:Toasty:1.3.0'
 }
