--- a/basiclib/build.gradle
+++ b/basiclib/build.gradle
@@ -28,8 +28,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     api 'com.github.jimu:componentlib:1.3.3'
 
-
-
+    api "android.arch.persistence.room:rxjava2:1.1.1"
+    api "androidx.room:room-runtime:$rootProject.roomVersion"
     api 'com.android.support:support-v4:28.0.0'
     api "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
     api "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayoutVersion"
