--- a/jetpack/build.gradle
+++ b/jetpack/build.gradle
@@ -46,11 +46,11 @@ dependencies {
     annotationProcessor 'com.github.jimu:router-anno-compiler:1.0.1'
 
 
-//    annotationProcessor "androidx.room:room-compiler:$rootProject.roomVersion"
+    annotationProcessor "androidx.room:room-compiler:$rootProject.roomVersion"
 //    implementation "android.arch.work:work-runtime-ktx:$rootProject.workVersion"
 
 
-//    implementation "androidx.room:room-runtime:$rootProject.roomVersion"
+
 //    implementation "com.google.android.material:material:$rootProject.supportLibraryVersion"
 //    implementation "com.google.code.gson:gson:$rootProject.gsonVersion"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$rootProject.kotlinVersion"
